email validator error, i need to create that folder

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~9.1.0",
+    "@nativescript/schematics": "^10.0.2",
     "@ngtools/webpack": "~9.1.0",
+    "@schematics/angular": "^10.0.5",
     "nativescript-dev-webpack": "~1.5.0",
     "tns-platform-declarations": "~6.5.0",
     "typescript": "~3.8.3"
